--- a/scss/pages/prodact-card.scss
+++ b/scss/pages/prodact-card.scss
@@ -180,6 +180,7 @@ a {
     max-width: 1000px;
     height: 500px;
     margin: 50px 0;
+    margin-bottom: 150px;
     margin-left: auto;
     margin-right: auto;
 
@@ -189,7 +190,7 @@ a {
     width: 100%;
     max-width: 500px;
     height: 400px;
-    padding-top: 80px;
+    margin-bottom: 100px;
 
     .podact-image {
         width: 100%;
@@ -206,7 +207,7 @@ a {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 0px;
+    padding: 50px 0px;
 
     .cont__h2 {
         color: rgb(22, 28, 36);
